--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/default.css" />
 
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/slick-menu.css" />
 
     <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
